Create only one ContextFactory in content unit tests

ImageTransportFactory::InitializeForUnitTests gets called in the setup
of many tests.  However, ui::InitializeContextFactoryForTests via
RenderViewHostTestHarness::SetUp was also being called indirectly in
many unit tests as well.  This would result in two context factories,
one set on ui::aura::Env and the other being the ImageTransportFactory
instance.

Fix this problem by consolidating these two in content unittests.

This fix is in the service of fixing racy RenderWidgetHostViewChildFrame
tests that were using fake surface namespace ids that were never
registered.  That bug is fixed by registering that id with the (single)
global SurfaceManager on the context factory.

BUG=616976
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2079623002
Cr-Commit-Position: refs/heads/master@{#400814}

Former-commit-id: d31c7828f22b988a63718fd9dd8735c7220aba57