content/test/test_render_view_host.h
@@ -13,6 +13,7 @@
 #include "base/gtest_prod_util.h"
 #include "base/macros.h"
 #include "build/build_config.h"
+#include "cc/surfaces/surface_id_allocator.h"
 #include "content/browser/renderer_host/render_view_host_impl.h"
 #include "content/browser/renderer_host/render_widget_host_view_base.h"
 #include "content/public/common/web_preferences.h"
@@ -139,7 +140,7 @@ class TestRenderWidgetHostView : public RenderWidgetHostViewBase {
   RenderWidgetHostImpl* rwh_;
 
  private:
-  uint32_t surface_id_namespace_;
+  std::unique_ptr<cc::SurfaceIdAllocator> surface_id_allocator_;
   bool is_showing_;
   bool is_occluded_;
   bool did_swap_compositor_frame_;
